<resources>
    <string name="app_name" translatable="false">test</string>
    <string name="error_unable_to_start_form">An error occurred when starting the form</string>
    <string name="error_unable_to_save_form">An error occurred when saving the form</string>
    <string name="malaria">Malaria</string>
    <string name="add_member">Add Member</string>
    <string name="sort">Sort</string>
    <string name="home">Home</string>
    <string name="add_family">Add family</string>
    <string name="scan_qr">Scan QR</string>
    <string name="job_aids">Job Aids</string>
    <string name="saving_dialog_title">Saving</string>
    <string name="interpunct" translatable="false">\u00b7</string>
    <string name="malaria_followup_visit">FOLLOWUP\nVISIT</string>
    <string name="record_malaria">Record Pmtct follow-up</string>
    <string name="return_to_previous_page">Return all Pmtct Clients</string>
    <string name="last_visit_40_days_ago">Last visit %1$s ago</string>
    <string name="medical_history">Medical History</string>
    <string name="view_medical_history">View Medical History</string>
    <string name="call_no_number_provided">(no number provided)</string>
    <string name="view_upcoming_services">View upcoming services</string>
    <string name="family_has_nothing_due">Family has nothing due</string>
    <string name="go_to_family_s_profile">Go to family\'s profile</string>
    <string name="family_has_services_due">Family has services due</string>
    <string name="primary_care_giver">PRIMARY CAREGIVER</string>
    <string name="family_head">FAMILY HEAD</string>
    <string name="family_has_service_overdue"><![CDATA[Family has <font color=#FF0000>services overdue</font></b>]]></string>
    <string name="vaccine_service_upcoming"><![CDATA[%1$s <font color=#7f7f7f>upcoming (%2$s)</font></b>]]></string>
    <string name="vaccine_service_overdue"><![CDATA[%1$s <font color=#f04646>overdue (%2$s)</font></b>]]></string>
    <string name="vaccine_service_due"><![CDATA[%1$s <font color=#000000>due (%2$s)</font></b>]]></string>
    <string name="call_malaria_client">Malaria Client</string>
    <string name="head_of_family">Head of family</string>
    <string name="malaria_client">Malaria Client</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_phone_number">PhoneNumber copied to clipboard</string>
    <string name="call">Call</string>
    <string name="record_anc">Record ANC visit</string>
    <string name="record_anc_visit_not_done">ANC visit not done</string>
    <string name="not_visiting_this_month">Not visiting this month</string>
    <string name="undo">UNDO</string>
    <string name="call_family_head">Head of Family</string>
    <string name="call_primary_caregiver">Primary Caregiver</string>
    <string name="call_anc_client">ANC Client</string>
    <string name="call_pnc_client">PNC Client</string>
    <string name="call_head_of_family">Call Head of Family</string>
    <string name="view_malaria_test_result">View malaria test results</string>
    <string name="malaria_positive">Malaria positive</string>
    <string name="anc_string">ANC</string>
    <string name="pnc_string">PNC</string>
    <string name="visit_done">Visit Done</string>
    <string name="edit">EDIT</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="pmtct">PMTCT</string>
    <string name="register_pmtct">Register Pmtct</string>
    <string name="record_pmtct">Record PMTCT Followup</string>
    <string name="return_to_pmtct_clients">Return to Pmtct Clients List</string>
    <string name="next_visit_date">Next Due in %s</string>
    <string name="error_unable_save_home_visit">unable to save home visit</string>
    <string name="optional">optional</string>
    <string name="pmtct_visit">pmtct visit</string>
    <string name="hvl_results">HVL Results</string>
    <string name="view_hvl_results">View Client\'s HVL Results</string>
    <string name="baseline_investigation_results">Baseline Investigation Results</string>
    <string name="view_cd4_results">View CD4 Results</string>
    <string name="sample_id_title">SAMPLE ID:</string>
    <string name="collection_date">Collection Date</string>
    <string name="record_hvl">Record HVL</string>
    <string name="hvl">HVL</string>
    <string name="record_eac">Record EAC Visit</string>
    <string name="low_risk">Low Risk</string>
    <string name="medium_risk">Medium Risk</string>
    <string name="high_risk">High Risk</string>
    <string name="process_visit">Process Visit</string>

</resources>
