<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/notification_and_referral_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notification_and_referral_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLastVisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_notification_and_referral_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/tick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/childrow_history" />

            <ImageView
                android:id="@+id/iv_last_visit_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/row_goto" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/ivViewHistoryArrow"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tick_image"
                android:text="@string/view_medical_history"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_grey_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlNextVisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_last_visit_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/tick_image_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/childrow_history" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/tv_next_visit"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tick_image_next"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_grey_text"
                tools:text="@string/next_visit_date" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlUpcomingServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_next_visit_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/cross_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/childrow_upcoming" />

            <ImageView
                android:id="@+id/iv_upcoming_services_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/row_goto" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_name_due"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/iv_upcoming_services_arrow"
                android:layout_toRightOf="@+id/cross_image"
                android:gravity="left|center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/ivViewUpcomingServicesArrow"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_name_due"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/cross_image"
                android:text="@string/view_upcoming_services"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlFamilyServicesDue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_most_due_overdue_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/family_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/childrow_family" />

            <ImageView
                android:id="@+id/iv_family_services_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/row_goto" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_family_has"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/family_image"
                android:gravity="center_horizontal"
                android:text="@string/family_has_nothing_due"
                android:textColor="@android:color/black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/text_view_family_profile"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_family_has"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/family_image"
                android:text="@string/go_to_family_s_profile"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlHvlResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_family_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/hvl_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_hvl" />

            <ImageView
                android:id="@+id/iv_family_services_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/row_goto" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_hvl_results"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/hvl_image"
                android:gravity="center_horizontal"
                android:text="@string/hvl_results"
                android:textColor="@android:color/black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/tv_view_hvl_results"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_hvl_results"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/hvl_image"
                android:text="@string/view_hvl_results"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlBaselineInvestigationResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_hvl_results_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/baseline_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_testing" />

            <ImageView
                android:id="@+id/iv_family_services_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/row_goto" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_baseline_results"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/baseline_image"
                android:gravity="center_horizontal"
                android:text="@string/baseline_investigation_results"
                android:textColor="@android:color/black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/tv_view_baseline_results"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_baseline_results"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/baseline_image"
                android:text="@string/view_cd4_results"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>

        <View
            android:id="@+id/view_notification_and_referral_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/notification_and_referral_row"
            android:background="@color/light_grey"
            android:visibility="gone" />

        <View
            android:id="@+id/view_last_visit_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlLastVisit"
            android:background="@color/light_grey"
            android:visibility="gone" />

        <View
            android:id="@+id/view_next_visit_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlNextVisit"
            android:background="@color/light_grey"
            android:visibility="gone" />

        <View
            android:id="@+id/view_positive_date_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlUpcomingServices"
            android:background="@color/light_grey"
            android:visibility="gone" />

        <View
            android:id="@+id/view_most_due_overdue_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlUpcomingServices"
            android:background="@color/light_grey"
            android:visibility="visible" />

        <View
            android:id="@+id/view_family_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlFamilyServicesDue"
            android:background="@color/light_grey"
            android:visibility="gone" />

        <View
            android:id="@+id/view_hvl_results_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlHvlResults"
            android:background="@color/light_grey"
            android:visibility="gone" />

        <View
            android:id="@+id/view_baseline_results_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlBaselineInvestigationResults"
            android:background="@color/light_grey"
            android:visibility="gone" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>