<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/collapsing_toolbar_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MalariaTheme.AppBarOverlay.Light"
                    app:contentInsetEnd="0dp"
                    app:contentInsetLeft="0dp"
                    app:contentInsetRight="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin">

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="@string/return_to_pmtct_clients"
                        android:textColor="@color/customAppThemeBlue"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="17sp" />
                </androidx.appcompat.widget.Toolbar>

                <LinearLayout
                    android:id="@+id/profile_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_collapseMode="parallax">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageview_profile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/ic_member"
                        app:civ_border_color="@color/transparent"
                        app:civ_border_width="3dp" />

                        <TextView
                            android:id="@+id/risk_label"
                            android:fontFamily="@font/google_sans_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/imageview_profile"
                            android:background="@drawable/risk_label"
                            android:paddingStart="8dp"
                            android:paddingTop="6dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="6dp"
                            android:textColor="@color/default_risk_text_black"
                            android:textSize="13sp"
                            android:visibility="gone"
                            tools:text="Low Risk"
                            tools:visibility="visible" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textview_name"
                            android:fontFamily="@font/google_sans_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="Patient Name, Age"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/call_widget_font3" />
                        <TextView
                            android:id="@+id/textview_name_mother"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/google_sans_regular"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="Mother Name, Age"
                            android:visibility="gone"
                            tools:visibility="visible"
                            android:textColor="@color/visit_status_ok"
                            android:textSize="@dimen/call_widget_font3" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_gender"
                            android:fontFamily="@font/google_sans_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="Gender"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/profile_dot_separator_margin"
                            android:layout_marginRight="@dimen/profile_dot_separator_margin"
                            android:text="@string/interpunct"
                            android:textSize="18sp"
                            android:textColor="@color/primary" />

                        <TextView
                            android:id="@+id/textview_address"
                            android:fontFamily="@font/google_sans_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="Address #24"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/profile_dot_separator_margin"
                            android:layout_marginRight="@dimen/profile_dot_separator_margin"
                            android:text="@string/interpunct"
                            android:textSize="18sp"
                            android:textColor="@color/primary" />


                        <TextView
                            android:id="@+id/textview_id"
                            android:fontFamily="@font/google_sans_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="ID:123456"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />
                    </LinearLayout>
                    <View
                        android:layout_width="200dp"
                        android:layout_height="0.2dp"
                        android:background="@color/primary"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:alpha="0.5"/>
                    <TextView
                        android:id="@+id/client_reg_number"
                        android:fontFamily="@font/google_sans_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="0dp"
                        android:paddingTop="@dimen/register_list_top_bottom_min_padding"
                        tools:text="123-131-31-4"
                        android:textAllCaps="true"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/register_list_desc_size"
                        tools:visibility="visible"
                        android:visibility="gone" />


                    <View
                        android:id="@+id/family_head_separator"
                        android:layout_width="200dp"
                        android:layout_height="0.2dp"
                        android:background="@color/primary"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:alpha="0.5"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/linked_to_mother_champion"
                        android:fontFamily="@font/google_sans_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="0dp"
                        android:paddingTop="@dimen/register_list_top_bottom_min_padding"
                        android:text="@string/family_head"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/register_list_desc_size"
                        android:visibility="gone" />
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/record_visit_pmtct"
                layout="@layout/view_record_pmtct" />

            <include layout="@layout/content_pmtct_profile" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>